[package]
name = "event-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
derive_more = "0.99.16"
diesel = { version = "1.4.7", features = ["chrono", "sqlite"] }
diesel_migrations = "1.4.0"
enum-utils = "0.1.2"
env_logger = "0.9.0"
eyre = "0.6.5"
futures = "0.3.16"
google-calendar3 = { git = "https://github.com/iburinoc/google-apis-rs", branch = "yup-oauth2-noninteractive-authenticator" }
hyper = "0.14.11"
hyper-rustls = "0.22.1"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["brotli", "deflate", "gzip", "stream"] }
serde = "1.0.127"
serde_json = "1.0.66"
structopt = "0.3.22"
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = [ "fs", "macros", "rt-multi-thread" ] }
yup-oauth2 = { git = "https://github.com/iburinoc/yup-oauth2", branch = "noninteractive-authenticator" }
