[package]
name = "event-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
derive_more = "0.99.16"
diesel = { version = "1.4.7", features = ["chrono", "sqlite"] }
diesel_migrations = "1.4.0"
enum-utils = "0.1.2"
env_logger = "0.9.0"
eyre = "0.6.5"
futures = "0.3.16"
google-apis-common = { git = "https://github.com/sean-purcell/google-apis-rs", branch = "yup-oauth2-noninteractive-authenticator" }
google-calendar3 = { git = "https://github.com/sean-purcell/google-apis-rs", branch = "yup-oauth2-noninteractive-authenticator" }
hyper = "1"
hyper-rustls = "0.27"
hyper-util = "0.1"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["brotli", "deflate", "gzip", "stream"] }
rustls = "*"
serde = "1.0.127"
serde_json = "1.0.66"
structopt = "0.3.22"
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = [ "fs", "macros", "rt-multi-thread" ] }
yup-oauth2 = { git = "https://github.com/sean-purcell/yup-oauth2", branch = "noninteractive-authenticator" }
